--- a/main/templates/layout/basic.html
+++ b/main/templates/layout/basic.html
@@ -16,25 +16,27 @@
         </header>
         <div class="row">
             <ul class="col nav justify-content-end border">
-
+                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                        aria-haspopup="true" aria-expanded="false">Профиль</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Мои объявления</a>
+                        <a class="dropdown-item" href="{% url 'main:profile' %}">Мои объявления</a>
                         <a class="dropdown-item" href="#">Изменить личные данные</a>
                         <a class="dropdown-item" href="#">Изменить пароль</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Выйти</a>
+                        <a class="dropdown-item" href="{% url 'main:logout' %}">Выйти</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Удалить</a>
                     </div>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'main:login' %}">Вход</a>
+                </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href ='#'>Регистрация</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Вход</a>
                 </li>
             </ul>
         </div>
