--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h2>Вход</h2>
     {% if user.is_authenticated %}
-    <p>Вы уже выполнили вход {% user.username %}</p>
+    <p>Вы уже выполнили вход </p>
     {% else %}
     <form method="post">
     {% csrf_token %}
